Build sentiment classifier class

--- a/pytorch/bert.ipynb
+++ b/pytorch/bert.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b1814138",
+   "id": "849e9a09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "250e7153",
+   "id": "89a4c9b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "be80cc49",
+   "id": "1bf6358c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e9acd93b",
+   "id": "4ada20f2",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4efd9d2f",
+   "id": "ad7ca6d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0414137d",
+   "id": "5e0295a3",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6a4aa66a",
+   "id": "b649547f",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "39835733",
+   "id": "c4089dd3",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "434860f7",
+   "id": "55d948d3",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e9fa933e",
+   "id": "cdf5a981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4b976709",
+   "id": "46446509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "225f8573",
+   "id": "22cf5615",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b2f8fa4",
+   "id": "0260fd91",
    "metadata": {},
    "source": [
     "### Data Preprocessing"
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "41a7d56e",
+   "id": "4faea82d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "ce751a27",
+   "id": "ecb415fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "65ff9719",
+   "id": "873d6e85",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "ab63b71c",
+   "id": "eeb076b3",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "cbd4be0d",
+   "id": "b83ca046",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "5c1d3c55",
+   "id": "02916c66",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "5b0f14b9",
+   "id": "03578e6d",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "72e2a49e",
+   "id": "91b62ba6",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "d22e5f62",
+   "id": "b024d98d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "85b3cfe2",
+   "id": "bc35caf8",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6172dc95",
+   "id": "452c8d8d",
    "metadata": {},
    "source": [
     "### Dataset"
@@ -674,24 +674,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "975b02a3",
+   "execution_count": 162,
+   "id": "b82219f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "class GPReviewDataset(Dataset):\n",
     "    \n",
-    "    def __init__(self, review, target, tokenizer, max_len):\n",
-    "        self.review = review\n",
-    "        self.target = target\n",
+    "    def __init__(self, reviews, targets, tokenizer, max_len):\n",
+    "        self.reviews = reviews\n",
+    "        self.targets = targets\n",
     "        self.tokenizer = tokenizer\n",
     "        self.max_len = max_len\n",
     "        \n",
     "    def __len__(self):\n",
-    "        return len(self.review)\n",
+    "        return len(self.reviews)\n",
     "    \n",
     "    def __getitem__(self, item):\n",
-    "        review = str(self.review[item])\n",
+    "        review = str(self.reviews[item])\n",
+    "        target = self.targets[item]\n",
     "        \n",
     "        encoding = tokenizer.encode_plus(\n",
     "            review,\n",
@@ -705,16 +706,16 @@
     "        \n",
     "        return {\n",
     "            'review_text': review,\n",
-    "            'input_ids': encoding['input_ids'],\n",
-    "            'attention_mask': encoding['attention_mask'],\n",
-    "            'targets': torch.tensor(self.target[item], dtype=torch.long)\n",
+    "            'input_ids': encoding['input_ids'].flatten(),\n",
+    "            'attention_mask': encoding['attention_mask'].flatten(),\n",
+    "            'targets': torch.tensor(target, dtype=torch.long)\n",
     "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "d12391f8",
+   "execution_count": 163,
+   "id": "abbd3fe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,28 +726,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "7b048bfb",
+   "execution_count": 164,
+   "id": "5ba16818",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train, df_test = train_test_split(df, test_size=0.2, random_state=RANDOM_SEED)\n",
+    "df_train, df_test = train_test_split(df, test_size=0.1, random_state=RANDOM_SEED)\n",
     "df_val, df_test = train_test_split(df_test, test_size=0.5, random_state=RANDOM_SEED)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "1db8b508",
+   "execution_count": 165,
+   "id": "2d0f0a14",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((12596, 12), (1575, 12), (1575, 12))"
+       "((14171, 12), (787, 12), (788, 12))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,15 +758,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "314bf018",
+   "execution_count": 168,
+   "id": "6faaff78",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_dataloader(df, tokenizer, max_len, batch_size):\n",
     "    ds = GPReviewDataset(\n",
-    "        review=df.content.to_numpy(),\n",
-    "        target=df.sentiment.to_numpy(),\n",
+    "        reviews=df.content.to_numpy(),\n",
+    "        targets=df.sentiment.to_numpy(),\n",
     "        tokenizer=tokenizer,\n",
     "        max_len=max_len\n",
     "    )\n",
@@ -779,8 +780,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "04089ede",
+   "execution_count": 169,
+   "id": "18145235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,8 +792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "a890fd83",
+   "execution_count": 170,
+   "id": "81267fbf",
    "metadata": {},
    "outputs": [
     {
@@ -810,16 +811,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "b96d2fdd",
+   "execution_count": 174,
+   "id": "4032da1a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([16, 1, 160])\n",
-      "torch.Size([16, 1, 160])\n",
+      "torch.Size([16, 160])\n",
+      "torch.Size([16, 160])\n",
       "torch.Size([16])\n"
      ]
     }
@@ -832,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "127a9c8b",
+   "id": "fd9f44b3",
    "metadata": {},
    "source": [
     "### Hugging Face: BERT"
@@ -841,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "ea9d2231",
+   "id": "705bd34c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "725cd1f8",
+   "id": "237daf4c",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "b06aac36",
+   "id": "36eefd8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "888eb8e2",
+   "id": "f529a30e",
    "metadata": {
     "scrolled": true
    },
@@ -905,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "44ab1631",
+   "id": "bba1b8c7",
    "metadata": {
     "scrolled": false
    },
@@ -925,8 +926,168 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "id": "39fd5ad1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "768"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Number of hidden units in BERT model\n",
+    "bert_model.config.hidden_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9eb15cb",
+   "metadata": {},
+   "source": [
+    "### Sentiment Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "4e0376ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new class from nn module\n",
+    "# Num classes, feed data, regularization, append output layer, call softmax\n",
+    "\n",
+    "class SentimentClassifier(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, n_classes):\n",
+    "        super(SentimentClassifier, self).__init__()\n",
+    "        self.bert = BertModel.from_pretrained(PRETRAINED_MODEL)\n",
+    "        self.drop = nn.Dropout(p=0.3)\n",
+    "        self.out = nn.Linear(self.bert.config.hidden_size, n_classes)\n",
+    "        self.softmax = nn.Softmax(dim=1)\n",
+    "        \n",
+    "    def forward(self, input_ids, attention_mask):\n",
+    "        state = self.bert(\n",
+    "            input_ids=input_ids,\n",
+    "            attention_mask=attention_mask\n",
+    "        )\n",
+    "        output = self.drop(state['pooler_output'])\n",
+    "        output = self.out(output)\n",
+    "        return self.softmax(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "45e4a681",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['negative', 'neutral', 'positive']"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "160e33cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = SentimentClassifier(len(class_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "4afead43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([16, 160])\n",
+      "torch.Size([16, 160])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_ids = data['input_ids']\n",
+    "attention_mask = data['attention_mask']\n",
+    "\n",
+    "print(input_ids.shape)\n",
+    "print(attention_mask.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "3f195230",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6186, 0.0804, 0.3010],\n",
+       "        [0.6640, 0.1251, 0.2109],\n",
+       "        [0.5620, 0.1886, 0.2494],\n",
+       "        [0.5236, 0.1655, 0.3109],\n",
+       "        [0.6239, 0.1461, 0.2300],\n",
+       "        [0.5063, 0.1483, 0.3455],\n",
+       "        [0.5719, 0.0898, 0.3383],\n",
+       "        [0.6569, 0.1323, 0.2108],\n",
+       "        [0.5449, 0.1084, 0.3466],\n",
+       "        [0.5496, 0.1275, 0.3229],\n",
+       "        [0.4436, 0.0870, 0.4694],\n",
+       "        [0.6125, 0.1782, 0.2093],\n",
+       "        [0.5818, 0.1572, 0.2610],\n",
+       "        [0.6849, 0.0872, 0.2279],\n",
+       "        [0.6356, 0.1627, 0.2017],\n",
+       "        [0.5640, 0.0861, 0.3499]], grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Batch probability outputs\n",
+    "model(input_ids, attention_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "35fb71f3",
+   "id": "a8b4035d",
    "metadata": {},
    "outputs": [],
    "source": []
