Define training, eval fns and loop

--- a/pytorch/bert.ipynb
+++ b/pytorch/bert.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "849e9a09",
+   "id": "0e38a82b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "89a4c9b7",
+   "id": "1342b975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "1bf6358c",
+   "id": "4442403c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4ada20f2",
+   "id": "09eeb0fd",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ad7ca6d1",
+   "id": "8e4fb2c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e0295a3",
+   "id": "17819da0",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b649547f",
+   "id": "3d48c0e1",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c4089dd3",
+   "id": "7e4b5a66",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "55d948d3",
+   "id": "176ef1fe",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cdf5a981",
+   "id": "6e17087a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "46446509",
+   "id": "e1ce7940",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "22cf5615",
+   "id": "37369e48",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0260fd91",
+   "id": "48606a32",
    "metadata": {},
    "source": [
     "### Data Preprocessing"
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "4faea82d",
+   "id": "0572657f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "ecb415fd",
+   "id": "34ed5676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "873d6e85",
+   "id": "500245ba",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "eeb076b3",
+   "id": "05f5b712",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "b83ca046",
+   "id": "f23bf8f3",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "02916c66",
+   "id": "a3e6162d",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "03578e6d",
+   "id": "d40de4f5",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "91b62ba6",
+   "id": "aa7a4d2a",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b024d98d",
+   "id": "46babfc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "bc35caf8",
+   "id": "87d9e38f",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "452c8d8d",
+   "id": "3e5eb5a8",
    "metadata": {},
    "source": [
     "### Dataset"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "b82219f9",
+   "id": "285b2c18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "abbd3fe0",
+   "id": "3f10174d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "5ba16818",
+   "id": "f5cde048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "2d0f0a14",
+   "id": "142a3e38",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "6faaff78",
+   "id": "98beee99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "18145235",
+   "id": "682070a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "81267fbf",
+   "id": "556999a6",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "4032da1a",
+   "id": "8fc88643",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9f44b3",
+   "id": "53ab19c3",
    "metadata": {},
    "source": [
     "### Hugging Face: BERT"
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "705bd34c",
+   "id": "7ce83447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "237daf4c",
+   "id": "2c678422",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "36eefd8a",
+   "id": "056c5920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "f529a30e",
+   "id": "e215892a",
    "metadata": {
     "scrolled": true
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "bba1b8c7",
+   "id": "f228ec65",
    "metadata": {
     "scrolled": false
    },
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "39fd5ad1",
+   "id": "76d3b5cd",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9eb15cb",
+   "id": "dd0ba5e6",
    "metadata": {},
    "source": [
     "### Sentiment Classification"
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "4e0376ca",
+   "id": "df3bb2e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "45e4a681",
+   "id": "58e58ba1",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "160e33cb",
+   "id": "fb6546c7",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "4afead43",
+   "id": "177e74e0",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "3f195230",
+   "id": "aa2f9ba1",
    "metadata": {},
    "outputs": [
     {
@@ -1085,9 +1085,210 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "feaf4f29",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "846536e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = transformers.AdamW(model.parameters(), lr=2e-5, correct_bias=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "59ea7369",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44300\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_steps = len(train_dataloader) * EPOCHS\n",
+    "print(total_steps) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "547993a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_scheduler = transformers.get_linear_schedule_with_warmup(\n",
+    "    optimizer,\n",
+    "    num_warmup_steps=0,\n",
+    "    num_training_steps=total_steps\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "d50515aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "c5d7bc8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch(\n",
+    "    model,\n",
+    "    dataloader,\n",
+    "    loss_fn,\n",
+    "    optimizer,\n",
+    "    scheduler,\n",
+    "    n_examples\n",
+    "):\n",
+    "    model = model.train()\n",
+    "    \n",
+    "    losses = []\n",
+    "    correct_preds = 0\n",
+    "    \n",
+    "    for data in dataloader:\n",
+    "        input_ids = data['input_ids']\n",
+    "        attention_mask = data['attention_mask']\n",
+    "        targets = data['targets']\n",
+    "        \n",
+    "        outputs = model(\n",
+    "            input_ids = input_ids,\n",
+    "            attention_mask = attention_mask\n",
+    "        )\n",
+    "        \n",
+    "        _, preds = torch.max(outputs, dim=1)\n",
+    "        loss = loss_fn(outputs, targets)\n",
+    "        \n",
+    "        correct_preds += torch.sum(preds == targets)\n",
+    "        losses.append(loss.item())\n",
+    "        \n",
+    "        loss.backward()\n",
+    "        nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        optimizer.step()\n",
+    "        scheduler.step()\n",
+    "        \n",
+    "    return correct_preds.double() / n_examples, np.mean(losses)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "13e662e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_model(model, dataloader, loss_fn, n_examples):\n",
+    "    model = model.eval()\n",
+    "    \n",
+    "    losses = []\n",
+    "    correct_preds = 0\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for data in data_loader:\n",
+    "            \n",
+    "            input_ids = data['input_ids']\n",
+    "            attention_mask = data['attention_mask']\n",
+    "            targets = data['targets']\n",
+    "\n",
+    "            outputs = model(\n",
+    "                input_ids = input_ids,\n",
+    "                attention_mask = attention_mask\n",
+    "            )\n",
+    "\n",
+    "            _, preds = torch.max(outputs, dim=1)\n",
+    "            loss = loss_fn(outputs, targets)\n",
+    "            \n",
+    "            correct_preds += torch.sum(preds == targets)\n",
+    "            losses.append(loss.item())\n",
+    "    \n",
+    "    return correct_preds.double() / n_examples, np.mean(losses)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b4035d",
+   "id": "ffedc382",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "history = defaultdict(list)\n",
+    "best_accuracy = 0\n",
+    "\n",
+    "for epoch in range(EPOCHS):\n",
+    "    \n",
+    "    print(f'Epoch {epoch+1}/{EPOCHS}')\n",
+    "    print('-' * 10)\n",
+    "    \n",
+    "    train_acc, train_loss = train_epoch(\n",
+    "        model,\n",
+    "        train_dataloader,\n",
+    "        loss_fn,\n",
+    "        optimizer,\n",
+    "        lr_scheduler,\n",
+    "        len(df_train)\n",
+    "    )\n",
+    "    \n",
+    "    print(f'Train loss: {train_loss}, accuracy: {train_acc}')\n",
+    "    \n",
+    "    val_acc, val_loss = eval_model(\n",
+    "        model,\n",
+    "        val_dataloader,\n",
+    "        loss_fn,\n",
+    "        len(df_train)\n",
+    "    )\n",
+    "    \n",
+    "    print(f'Val loss: {val_loss}, accuracy: {val_acc}')\n",
+    "    print()\n",
+    "    \n",
+    "    history['train_acc'].append(train_acc)\n",
+    "    history['train_loss'].append(train_loss)\n",
+    "    \n",
+    "    history['val_acc'].append(val_acc)\n",
+    "    history['val_loss'].append(val_loss)\n",
+    "    \n",
+    "    if val_acc > best_accuracy:\n",
+    "        torch.save(model, 'sentiment_model.pth')\n",
+    "        best_accuracy = val_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85a4d11f",
    "metadata": {},
    "outputs": [],
    "source": []
