--- a/pytorch/bert.ipynb
+++ b/pytorch/bert.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0e38a82b",
+   "id": "1b686e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "1342b975",
+   "id": "83c43cc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4442403c",
+   "id": "fc2098c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "09eeb0fd",
+   "id": "348ae57d",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e4fb2c1",
+   "id": "5fa1c04e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "17819da0",
+   "id": "64680df8",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3d48c0e1",
+   "id": "d84b0efc",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7e4b5a66",
+   "id": "8842fc37",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "176ef1fe",
+   "id": "6e1f93a0",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6e17087a",
+   "id": "fbbc4382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e1ce7940",
+   "id": "75302d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "37369e48",
+   "id": "7a7fdd3b",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48606a32",
+   "id": "af86af8c",
    "metadata": {},
    "source": [
     "### Data Preprocessing"
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "0572657f",
+   "id": "0d4e170d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "34ed5676",
+   "id": "58a784c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "500245ba",
+   "id": "8e15dc09",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "05f5b712",
+   "id": "7228e442",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "f23bf8f3",
+   "id": "ff331438",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "a3e6162d",
+   "id": "86509d19",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "d40de4f5",
+   "id": "45dd5ecc",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "aa7a4d2a",
+   "id": "1b42f223",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "46babfc1",
+   "id": "7761c836",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "87d9e38f",
+   "id": "3bcd3849",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e5eb5a8",
+   "id": "f00b46d8",
    "metadata": {},
    "source": [
     "### Dataset"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "285b2c18",
+   "id": "4d3c2c99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "3f10174d",
+   "id": "174de5fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "f5cde048",
+   "id": "83046687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "142a3e38",
+   "id": "b984cb67",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "98beee99",
+   "id": "05718047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "682070a0",
+   "id": "577bf8a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "556999a6",
+   "id": "edcfb268",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "8fc88643",
+   "id": "faf0f9d8",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ab19c3",
+   "id": "61ebebcb",
    "metadata": {},
    "source": [
     "### Hugging Face: BERT"
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "7ce83447",
+   "id": "ccf69fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "2c678422",
+   "id": "cc3271f9",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "056c5920",
+   "id": "de300bba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "e215892a",
+   "id": "5cfc411b",
    "metadata": {
     "scrolled": true
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "f228ec65",
+   "id": "d11d2bb2",
    "metadata": {
     "scrolled": false
    },
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "76d3b5cd",
+   "id": "8f0deb7b",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd0ba5e6",
+   "id": "283da34f",
    "metadata": {},
    "source": [
     "### Sentiment Classification"
@@ -956,8 +956,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "df3bb2e3",
+   "execution_count": 221,
+   "id": "66376126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,28 +965,24 @@
     "# Num classes, feed data, regularization, append output layer, call softmax\n",
     "\n",
     "class SentimentClassifier(nn.Module):\n",
-    "    \n",
     "    def __init__(self, n_classes):\n",
     "        super(SentimentClassifier, self).__init__()\n",
     "        self.bert = BertModel.from_pretrained(PRETRAINED_MODEL)\n",
     "        self.drop = nn.Dropout(p=0.3)\n",
     "        self.out = nn.Linear(self.bert.config.hidden_size, n_classes)\n",
-    "        self.softmax = nn.Softmax(dim=1)\n",
-    "        \n",
     "    def forward(self, input_ids, attention_mask):\n",
-    "        state = self.bert(\n",
-    "            input_ids=input_ids,\n",
-    "            attention_mask=attention_mask\n",
+    "        _, pooled_output = self.bert(\n",
+    "          input_ids=input_ids,\n",
+    "          attention_mask=attention_mask\n",
     "        )\n",
-    "        output = self.drop(state['pooler_output'])\n",
-    "        output = self.out(output)\n",
-    "        return self.softmax(output)"
+    "        output = self.drop(pooled_output)\n",
+    "        return self.out(output)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "58e58ba1",
+   "id": "89a6c8bf",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "fb6546c7",
+   "id": "5bc861f7",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "177e74e0",
+   "id": "c1167860",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "aa2f9ba1",
+   "id": "baa717e8",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feaf4f29",
+   "id": "67a9c94c",
    "metadata": {},
    "source": [
     "### Training"
@@ -1095,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "846536e9",
+   "id": "b49bfa38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "59ea7369",
+   "id": "97f6bf05",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "547993a8",
+   "id": "97618036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "d50515aa",
+   "id": "1df89e75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "c5d7bc8e",
+   "id": "99fcdae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "13e662e7",
+   "id": "61acbd99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,18 +1225,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffedc382",
+   "id": "f5d8cd4d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50\n",
-      "----------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "from collections import defaultdict\n",
@@ -1281,14 +1268,78 @@
     "    history['val_loss'].append(val_loss)\n",
     "    \n",
     "    if val_acc > best_accuracy:\n",
-    "        torch.save(model, 'sentiment_model.pth')\n",
+    "        torch.save(model.state_dict, 'sentiment_model.bin')\n",
     "        best_accuracy = val_acc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19adcae7",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "f46fae62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/gdown/cli.py:127: FutureWarning: Option `--id` was deprecated in version 4.3.1 and will be removed in 5.0. You don't need to pass it anymore to use a file ID.\n",
+      "  warnings.warn(\n",
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1V8itWtowCYnb2Bc9KlK9SxGff9WwmogA\n",
+      "To: /ssd003/home/amunim/deep-learning/pytorch/best_model_state.bin\n",
+      "100%|████████████████████████████████████████| 433M/433M [00:04<00:00, 87.6MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gdown --id 1V8itWtowCYnb2Bc9KlK9SxGff9WwmogA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "cb349feb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for SentimentClassifier:\n\tMissing key(s) in state_dict: \"bert.embeddings.position_ids\". ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [222]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m SentimentClassifier(\u001b[38;5;28mlen\u001b[39m(class_names))\n\u001b[0;32m----> 2\u001b[0m model\u001b[38;5;241m.\u001b[39mload_state_dict(torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbest_model_state.bin\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "File \u001b[0;32m/ssd003/projects/aieng/conversational_ai/envs/stable_env/lib/python3.8/site-packages/torch/nn/modules/module.py:1482\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[0;34m(self, state_dict, strict)\u001b[0m\n\u001b[1;32m   1477\u001b[0m         error_msgs\u001b[38;5;241m.\u001b[39minsert(\n\u001b[1;32m   1478\u001b[0m             \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMissing key(s) in state_dict: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   1479\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(k) \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m missing_keys)))\n\u001b[1;32m   1481\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(error_msgs) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m-> 1482\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mError(s) in loading state_dict for \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   1483\u001b[0m                        \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(error_msgs)))\n\u001b[1;32m   1484\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for SentimentClassifier:\n\tMissing key(s) in state_dict: \"bert.embeddings.position_ids\". "
+     ]
+    }
+   ],
+   "source": [
+    "model = SentimentClassifier(len(class_names))\n",
+    "model.load_state_dict(torch.load('best_model_state.bin'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a4d11f",
+   "id": "4fa78ad4",
    "metadata": {},
    "outputs": [],
    "source": []
